<resources>
    <string name="app_name">MusicAlignApp</string>

    <!-- Login -->
    <string name="login_hint_email">email</string>
    <string name="login_hint_password">contraseña</string>
    <string name="login_sign_in">¿Todavia no tienes cuenta? Regístrate</string>
    <string name="login">Iniciar Sesión</string>

    <!-- SignIn -->
    <string name="signin_form_nickname">Nombre público de usuario</string>
    <string name="signin_form_real_name">Nombre completo</string>
    <string name="signin_form_email">Correo electrónico</string>
    <string name="signin_form_password">Contraseña</string>
    <string name="signin_form_repeat_password">Repetir contraseña</string>
    <string name="signin_button_createaccount">Crear mi cuenta</string>
    <string name="signin_login">¿Ya tienes cuenta? Inicia Sesión</string>

    <!-- Home -->
    <string name="home_title">Home</string>
    <string name="home_projects_in_progress">Proyectos en proceso</string>
    <string name="home_projects_finished">Proyectos finalizados</string>

    <!-- AddFile -->
    <string name="addfile_title">Nuevo proyecto</string>
    <string name="addfile_upload_package">Crear Proyecto</string>
    <string name="addfile_upload_image_title">Cargar Imagen</string>
    <string name="addfile_upload_image_description">Presiona para cargar una imagen importada\n desde tu dispositivo</string>
    <string name="addfile_upload_file_title">Ficheros cargados</string>
    <string name="addfile_upload_file_description">Una vez cargada la imagen, se mostrará el nombre de todos los ficheros .svg relativos a la imagen</string>
    <string name="addfile_project_name">Nombre del Proyecto: %s</string>
    <string name="addfile_package_file_name">Nombre del fichero: %s</string>
    <string name="addfile_package_last_modified_date">Última modificación: %s</string>
    <string name="crop_image">Recortar Imagen</string>

    <!-- Replace System -->
    <string name="replace_system_title">Reemplazar Sistema</string>
    <string name="system_to_replace_name">Nombre del Sistema: %s</string>

    <!-- Align -->
    <string name="align_title">Alinear partitura (%s)</string>
    <string name="align_play">Play</string>
    <string name="align_stop">Stop</string>
    <string name="align_next">Next</string>
    <string name="align_back">Back</string>
    <string name="align_save">Guardar</string>
    <string name="align_re_align">Volver a Alinear</string>

    <string name="info_back_not_aligned">Volver al elemento previo sin alinear</string>
    <string name="info_next_not_aligned">Ir al siguiente elemento sin alinear</string>
    <string name="info_back">Volver al elemento previo</string>
    <string name="info_next">Ir al siguiente elemento</string>
    <string name="info_re_align">Volver a realizar alineación del elemento</string>

    <string name="info_red_color">Elemento actual</string>
    <string name="info_orange_color">Elemento accedido pero no alineado</string>
    <string name="info_green_color">Elemento alineado</string>
    <string name="info_black_color">Elemento todavia no accedido</string>

    <string name="title_buttons_dialog">Información sobre los botones</string>
    <string name="title_colors_dialog">Información sobre los colores</string>

    <!-- Align Configuration Dialog -->
    <string name="configuration_title">Configuración del alineamiento</string>
    <string name="show_align_info">Mostrar más información sobre el alineamiento</string>
    <string name="counter_title">Numero de trazados a mostrar alrededor del elemento alineado</string>
    <string name="do_not_show_paths">Dejar de mostrar trazados de elementos alineados</string>
    <string name="change_system">Cambiar archivo de alineamiento</string>
    <string name="subtract_symbol">-</string>
    <string name="add_symbol">+</string>

    <!-- Alert Dialogs -->
    <string name="alert_dialog_cancel">Cancelar</string>
    <string name="alert_dialog_accept">Aceptar</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_save">Guardar</string>

    <string name="save_warning_dialog_title">Confirma salida!</string>
    <string name="save_warning_change_system_dialog_title">Confirma cambio de sistema!</string>
    <string name="safe_delete_warning_dialog_title">Confirma borrado!</string>
    <string name="error_loading_package_dialog_title">Error!</string>
    <string name="confirm_saving_title">Confirma guardado!</string>

    <string name="save_warning_dialog_description">Estás seguro que quieres salir sin guardar?</string>
    <string name="save_change_system_warning_dialog_description">Estás seguro que quieres cambiar de sistema sin guardar? \n Si no se guardan los cambios, estos desaparecerán</string>
    <string name="safe_delete_warning_dialog_description">Estás seguro que quieres borrar\neste proyecto?</string>
    <string name="safe_done_correctly_title">Cambios guardados correctamente</string>
    <string name="safe_done_correctly_description">Los cambios han sido guardados de \n forma correcta</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Inicia sesión o registrate</string>
    <string name="action_sign_in_short">Inicia sesión</string>
    <string name="welcome">"Biewnvenido!"</string>
    <string name="invalid_username">El nombre de usuario no es válido</string>
    <string name="invalid_password">La contraseña debe tener >5 caracteres</string>
    <string name="login_failed">"Inicio de sesión fallido"</string>

    <string name="logout">Cerrar sesión</string>
    <string name="file_name">Nombre del proyecto: %s</string>
    <string name="last_modified">Última modificación:\n %s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_crop_image">Estas seguro que quieres guardar esta imagen como \n %s? \n\n Una vez guardada no se podrá deshacer esta acción</string>
    <string name="selected_files_title">Ficheros Seleccionados</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="no_guardar">No guardar</string>
    <string name="guardar_y_finalizar">Guardar y finalizar!</string>
    <string name="finalizado_bien_mal_title">¿Finalizado correctamente?</string>
    <string name="finalizado_bien_mal_description">El alineamiento se ha podido acabar correctamente?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="confirma_guardado">Confirma guardado</string>
    <string name="safe_save_description">Estas seguro que deseas guardar los cambios?</string>
    <string name="save_and_finish_description">Deseas guardar los cambios, o guardar y finalizar el proyecto</string>
    <string name="save_and_finish">Guardar y finalizar</string>
    <string name="just_save">Solo guardar</string>
    <string name="different_passwords">Las contraseñas indicadas no coinciden</string>
    <string name="email_not_valid">Correo electrónico no válido</string>
    <string name="invalid_password_length">Contraseña inválida (La contraseña debe tener un mínimo de 6 caràcteres)</string>

    <!-- Error Messages -->
    <string name="generic_error_message">Hubo un problema. Por favor, intentelo más tarde</string>
    <string name="error_image_name">Error con el nombre de la imagen</string>
    <string name="error_save">¡Ups! Parece que hubo un error al guardar los cambios.\nPor favor, inténtelo de nuevo</string>
    <string name="error_changing_system">¡Ups! Parece que hubo un error al intentar cambiar el sistema.\n Por favor, inténtelo de nuevo</string>

</resources>