<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvSaveWaringSelector"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardElevation="12dp"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="@color/background_form">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="24dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivAlertIcon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_warning"
            app:tint="@color/primary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitleText"
            android:textColor="@color/primary"
            android:text="@string/save_warning_dialog_title"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BodyText"
            android:textColor="@color/primary"
            android:text="@string/save_warning_dialog_description"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_dialog_accept"
                android:backgroundTint="@color/primary"
                android:textColor="@color/secondary"/>

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_dialog_cancel"
                android:backgroundTint="@color/primary"
                android:textColor="@color/secondary"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>