<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/buttonsDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/TitleText"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginBottom="20dp"
                android:text="@string/title_colors_dialog"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginBottom="9dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_blue_dot"
                    android:text="@string/align_next" />

                <Space
                    android:layout_width="15dp"
                    android:layout_height="0dp" />

                <TextView
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/info_red_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginBottom="9dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_green_dot"
                    android:text="@string/align_next" />

                <Space
                    android:layout_width="15dp"
                    android:layout_height="0dp" />

                <TextView
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/info_green_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginBottom="9dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_orange_dot"
                    android:text="@string/info_orange_color" />

                <Space
                    android:layout_width="15dp"
                    android:layout_height="0dp" />

                <TextView
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/info_orange_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginBottom="9dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_black_dot"
                    android:text="@string/align_next" />

                <Space
                    android:layout_width="15dp"
                    android:layout_height="0dp" />

                <TextView
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/info_black_color" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/primary"
                android:text="@string/alert_dialog_accept"
                android:textColor="@color/secondary" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>