<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.screens.align.AlignActivity">

    <FrameLayout
        android:id="@+id/flAppBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/align_title"
            style="@style/TitleText" />

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:padding="16dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvSaveChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:padding="16dp"
            android:text="@string/align_save"
            android:textColor="@color/secondary_light_60"
            style="@style/TitleText" />
    </FrameLayout>

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/ivPartiture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="40dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/composeView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <WebView
        android:id="@+id/webView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flAppBar"
        app:layout_constraintBottom_toTopOf="@id/llButtons"/>

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:text="@string/align_play"
                android:backgroundTint="@color/primary"
                android:textColor="@color/secondary"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/align_stop"
                android:backgroundTint="@color/primary"
                android:textColor="@color/secondary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:text="@string/align_next"
                android:backgroundTint="@color/primary"
                android:textColor="@color/secondary"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/align_back"
                android:backgroundTint="@color/primary"
                android:textColor="@color/secondary"/>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbLoadingWebView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/primary"
        app:layout_constraintStart_toStartOf="@id/webView"
        app:layout_constraintEnd_toEndOf="@id/webView"
        app:layout_constraintTop_toTopOf="@id/webView"
        app:layout_constraintBottom_toBottomOf="@id/webView"/>

    <ProgressBar
        android:id="@+id/pbLoadingSaving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/primary"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/webView"
        app:layout_constraintEnd_toEndOf="@id/webView"
        app:layout_constraintTop_toTopOf="@id/webView"
        app:layout_constraintBottom_toBottomOf="@id/webView"/>


</androidx.constraintlayout.widget.ConstraintLayout>