<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/ivHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="64dp"
        android:layout_marginHorizontal="12dp"
        android:src="@drawable/logo_name_app"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tilEmail"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="0dp"
        style="@style/FormTextInputLayout"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintBottom_toTopOf="@+id/tilPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        style="@style/FormTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColorHighlight="@color/error_dark"
            android:textColorHint="@color/error_dark" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvForgotPassword"
        style="@style/TertiaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/login_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginVertical="24dp"
        android:layout_marginHorizontal="12dp"
        android:backgroundTint="@color/primary"
        android:textColor="@color/secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>